# guitartrainer

./: CMakeLists.txt  Freatboard.pro  Fretboard.pro  FretboardWidget.cpp  FretboardWidget.h  Guitar.cpp  Guitar.h  GuitarTrainer.cpp  GuitarTrainer.h  NoteButton.h  NotePanel.h  Sound.cpp  Sound.h  StaveWidget.cpp  fretboards.qrc  fretboardwidget.cpp  fretboardwidget.h  guitar.cpp  guitar.h  guitartrainer.cpp  guitartrainer.h  main.cpp  sound.cpp  sound.h  stavewidget.cpp  stavewidget.h
